--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,10 +27,10 @@ minio.access-key=minioadmin
 minio.secret-key=minioadmin
 minio.bucket-name=autohub-bucket
 
-#Kafka
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=my-consumer-group
-spring.kafka.consumer.auto-offset-reset=earliest
+##Kafka
+#spring.kafka.bootstrap-servers=localhost:9092
+#spring.kafka.consumer.group-id=my-consumer-group
+#spring.kafka.consumer.auto-offset-reset=earliest
 
 #Jackson
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
